fix typo in title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
       rel="stylesheet"
     />
 
-    <title>Frono Roma</title>
+    <title>Forno Roma</title>
   </head>
   <body>
     <div id="root"></div>
