--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <script src="http://localhost:8097"></script>
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -54,6 +53,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./src/components/VoiceHelper/voiceEngine.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
